20% of login and register functions

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <div class="ostHeader">
         <div class="nav-bar">
             <a class="linkHome" href="/">Главная</a>
-            <a class="linkParticipants" href="/Participants">Участники</a>
+            <a class="linkParticipants" href="/participants">Участники</a>
             <a class="linkRating" href="/Rating">Рейтинг</a>
         </div>
         <div class="profile-information">
