--- a/views/partials/regLogPopup.ejs
+++ b/views/partials/regLogPopup.ejs
@@ -15,6 +15,8 @@
             <div class="titleLogForm">Зарегестрироваться</div>
             <input name="email" type="email" placeholder="Почта"/>
             <input name="password" type="password" placeholder="Пароль"/>
+            <input name="firstName" placeholder="Имя"/>
+            <input name="secondName" placeholder="Фамилия"/>
             <input class="sendAnket" type="submit" value="Зарегестрироваться">
             <div class="changerForm">Войти</div>
         </form>
